--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft"
             style="width:100%;font-size:22px">Cerrar</a>
         <div class="w3-container">
-            <img src="/assets/imagenes/Marchena_Asosores_logo_final_para_impresion_-03-removebg-preview.png"
+            <img src="./assets/imagenes/Marchena_Asosores_logo_final_para_impresion_-03-removebg-preview.png"
                 style="width:100%">
         </div>
         <div class="w3-container w3-center">
