punto para poner relativo el path
Alright, so this is for those who, like me, have struggled with this issue, and have tried to find a good answer. Here it is (it's a record for me as well to remember):

First, make all of the image paths relative, by putting a "." in front of it. For example:

<img src={"./images/logo.svg"}/>
This particular image lived in the 'public/images/ folder of my project.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marchena Asesores y Consultores</title>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"> -->
-    <link rel="stylesheet" href="assets/w3.css">
+    <link rel="stylesheet" href=".assets/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="icon" type="image/x-icon" href="/assets/imagenes/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/imagenes/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body,
@@ -188,7 +188,7 @@
 
         <!-- Image header -->
         <div class="w3-display-container w3-wide" style="margin-top:50px" id="home">
-            <img class="w3-image w3-grayscale-max w3-animate-fading" src="/assets/imagenes/ajedez01.jpg"
+            <img class="w3-image w3-grayscale-max w3-animate-fading" src="./assets/imagenes/ajedez01.jpg"
                 style="filter: opacity(90%);" alt="corte suprema" width="1600" height="900">
             <div class="w3-display-left w3-padding-large">
                 <h1 class="w3-text-theme"><b>MARCHENA</b><br>Asesores y Consultores</h1>
