--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="icon" type="image/x-icon" href="./assets/imagenes/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
         body,
         h1,
@@ -163,9 +163,9 @@
         </div>
         <div class="w3-bar-block">
             <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Quienes Somos</a>
-            <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Showcase</a>
-            <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a>
-            <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Designers</a>
+            <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Servicios</a>
+            <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Nuestro Equipo</a>
+            <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Nuestro Equipo</a>
             <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Packages</a>
             <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
         </div>
@@ -254,8 +254,8 @@
             </p>
 
             <button onclick="toggleAccordion('Demo1')"
-                class="w3-button w3-block w3-theme w3-left-align w3-xlarge responsive-button">Asesoría en
-                Derecho Laboral y de la Seguridad Social<i class="fa fa-caret-down"></i>
+                class="w3-button w3-block w3-theme-dark w3-left-align w3-xlarge responsive-button">Asesoría en
+                Derecho Laboral y de la Seguridad Social<i class="fa-solid fa-caret-down"></i>
             </button>
             <div id="Demo1" class="w3-hide w3-animate-zoom">
                 <ul class="w3-ul w3-large">
@@ -267,7 +267,7 @@
             </div>
 
             <button onclick="toggleAccordion('Demo2')"
-                class="w3-button w3-block w3-theme-l3 w3-left-align w3-xlarge responsive-button">Gestión del Talento
+                class="w3-button w3-block w3-theme-l1 w3-left-align w3-xlarge responsive-button">Gestión del Talento
                 Humano &nbsp;<i class="fa fa-caret-down"></i>
             </button>
             <div id="Demo2" class="w3-hide w3-animate-zoom">
@@ -280,7 +280,7 @@
             </div>
 
             <button onclick="toggleAccordion('Demo3')"
-                class="w3-button w3-block w3-theme w3-left-align w3-xlarge responsive-button">Sistemas de gestión
+                class="w3-button w3-block w3-theme-dark w3-left-align w3-xlarge responsive-button">Sistemas de gestión
                 &nbsp;<i class="fa fa-caret-down"></i>
             </button>
             <div id="Demo3" class="w3-hide w3-animate-zoom">
@@ -293,31 +293,76 @@
 
         </div>
 
-        <!-- Designers -->
+        <!-- Valores -->
         <div class="w3-container" id="designers" style="margin-top:75px">
             <h1 class="w3-xxxlarge w3-text-theme "><b>Valores</b></h1>
             <hr style="width:50px;border:5px solid" class="w3-round w3-text-theme ">
-            <p>The best team in the world.</p>
-            <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.
+
+            <p>En nuestra organización, nos guiamos por los principios fundamentales de ética, innovación y confianza,
+                para ofrecer soluciones personalizadas y efectivas que respeten las diferencias culturales y promuevan
+                relaciones de confianza mutua.
             </p>
-            <p><b>Our designers are thoughtfully chosen</b>:</p>
+
         </div>
 
+        <div class="w3-row-padding">
+            <div class="w3-col m4 w3-margin-bottom">
+                <div class="w3-theme-dark w3-center w3-padding-16">
+                    <i class="w3-xxxlarge fa-solid fa-scale-balanced"></i>
+                    <div class="w3-container">
+                        <h3>Etica</h3>
+                        <p class="w3-opacity">Respeto y Confidencialidad</p>
+                        <p>Basándonos en el respeto por las diferencias de creencias, criterios e identidad cultural de
+                            nuestros clientes, guardando siempre el principio de confidencialidad.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-col m4 w3-margin-bottom">
+                <div class="w3-theme-l1 w3-center w3-padding-16">
+                    <i class="w3-xxxlarge fa-solid fa-lightbulb"></i>
+                    <div class="w3-container">
+                        <h3>Innovación</h3>
+                        <p class="w3-opacity">Soluciones Adaptables</p>
+                        <p>Generando soluciones distintas a cada uno de los retos que se presentan día a día en las
+                            organizaciones que sean adaptables a su contexto y sobre todo eficaces.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-col m4 w3-margin-bottom">
+                <div class="w3-theme-dark w3-center w3-padding-16">
+                    <i class="w3-xxxlarge fa-solid fa-handshake"></i>
+                    <div class="w3-container">
+                        <h3>Confianza</h3>
+                        <p class="w3-opacity">Relaciones Honestas</p>
+                        <p>Nuestros clientes confían en nuestro trabajo por medio de la eficacia demostrada en cada
+                            solución, y nosotros en ellos por la honestidad recibida para poder ser su aliado.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
         <!-- The Team -->
+        <div class="w3-container" id="designers" style="margin-top:75px">
+            <h1 class="w3-xxxlarge w3-text-theme "><b>Nuestro Equipo</b></h1>
+            <hr style="width:50px;border:5px solid" class="w3-round w3-text-theme ">
+
+            <p>En nuestra organización, nos guiamos por los principios fundamentales de ética, innovación y confianza,
+                para ofrecer soluciones personalizadas y efectivas que respeten las diferencias culturales y promuevan
+                relaciones de confianza mutua.
+            </p>
+
+        </div>
+
+
         <div class="w3-row-padding w3-grayscale">
             <div class="w3-col m4 w3-margin-bottom">
                 <div class="w3-light-grey">
-                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                    <img src="./assets/imagenes/perfil01.jpg" alt="John" style="width:100%">
                     <div class="w3-container">
-                        <h3>John Doe</h3>
-                        <p class="w3-opacity">CEO & Founder</p>
+                        <h3>Sandra Acuña</h3>
+                        <p class="w3-opacity">Abogada</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
                     </div>
@@ -325,10 +370,10 @@
             </div>
             <div class="w3-col m4 w3-margin-bottom">
                 <div class="w3-light-grey">
-                    <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+                    <img src="./assets/imagenes/perfil02.jpg" alt="Jane" style="width:100%">
                     <div class="w3-container">
-                        <h3>Jane Doe</h3>
-                        <p class="w3-opacity">Designer</p>
+                        <h3>Adolfo Marchena</h3>
+                        <p class="w3-opacity">Abogado</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
                     </div>
@@ -336,10 +381,10 @@
             </div>
             <div class="w3-col m4 w3-margin-bottom">
                 <div class="w3-light-grey">
-                    <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
+                    <img src="./assets/imagenes/perfil03.jpg" alt="Mike" style="width:100%">
                     <div class="w3-container">
-                        <h3>Mike Ross</h3>
-                        <p class="w3-opacity">Architect</p>
+                        <h3>Dina Marchena</h3>
+                        <p class="w3-opacity">Psicóloga</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
                     </div>
@@ -347,7 +392,10 @@
             </div>
         </div>
 
-        <!-- Packages / Pricing Tables -->
+
+
+
+        <!-- Packages / Pricing Tables
         <div class="w3-container" id="packages" style="margin-top:75px">
             <h1 class="w3-xxxlarge w3-text-theme "><b>Packages.</b></h1>
             <hr style="width:50px;border:5px solid" class="w3-round w3-text-theme ">
@@ -392,12 +440,12 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
 
         <!-- Contact -->
-        <div class="w3-container" id="contact" style="margin-top:75px">
-            <h1 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h1>
-            <hr style="width:50px;border:5px solid red" class="w3-round">
+        <div class="w3-container" id="designers" style="margin-top:75px">
+            <h1 class="w3-xxxlarge w3-text-theme "><b>Contacto</b></h1>
+            <hr style="width:50px;border:5px solid" class="w3-round w3-text-theme ">
             <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting
                 new people!</p>
             <form action="/action_page.php" target="_blank">
@@ -413,13 +461,21 @@
                     <label>Message</label>
                     <input class="w3-input w3-border" type="text" name="Message" required>
                 </div>
-                <button type="submit" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom">Send
+                <button type="submit" class="w3-button w3-block w3-padding-large w3-theme w3-margin-bottom">Send
                     Message</button>
             </form>
         </div>
 
         <!-- End page content -->
     </div>
+
+
+
+    </div>
+
+
+
+
 
     <!-- W3.CSS Container -->
     <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px">
